# asm-im

./: .gitignore  Cargo.toml  asm-im.tex  controllers.tex  fem.tex  gmt.bib  windloads.tex
asm-control/: Cargo.toml  build.rs
asm-control/examples/: multiple_ctrlr.rs
asm-control/src/: lib.rs
asm-control/src/eight_khz/: ASM_modal_controller_S1_data.c  ASM_modal_controller_S1_private.h  ASM_modal_controller_S1_types.h  Makefile
asm-control/src/eight_khz/segment1/: ASM_modal_controller_S1.c  ASM_modal_controller_S1.h  mod.rs  (+1 more)
asm-control/src/fourty_khz/: ASM_modal_controller.c  ASM_modal_controller.h  ASM_modal_controller_S1.c  ASM_modal_controller_S1.h  ASM_modal_controller_S1_data.c  ASM_modal_controller_S1_private.h  ASM_modal_controller_S1_types.h  ASM_modal_controller_data.c  ASM_modal_controller_private.h  ASM_modal_controller_types.h  ert_main.c  mod.rs  rtwtypes.h
asm-control/src/segment1/: ert_main.c
asm-control/src/segment2/: ASM_modal_controller_S2.h  ASM_modal_controller_S2_data.c  ASM_modal_controller_S2_private.h  ASM_modal_controller_S2_types.h  mod.rs  rtwtypes.h
asm-control/src/segment3/: ASM_modal_controller_S3_private.h
asm-control/src/segment4/: ASM_modal_controller_S4.h  ASM_modal_controller_S4_private.h  ASM_modal_controller_S4_types.h
asm-control/src/segment5/: ASM_modal_controller_S5.h  ASM_modal_controller_S5_private.h  ASM_modal_controller_S5_types.h
asm-control/src/segment6/: ASM_modal_controller_S6.h  ASM_modal_controller_S6_data.c  ASM_modal_controller_S6_private.h  rtwtypes.h
asm-control/src/segment7/: mod.rs  rtwtypes.h
(+42 files in other folders)
