[package]
name = "asm-control"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dosio = { git = "https://github.com/rconan/dosio.git", branch = "main" }
paste = "1.0.5"
#simulink-rs = { git = "https://github.com/rconan/simulink-rs.git", branch = "main" }
simulink-rs = { path = "/media/rconan/projects/simulink-rs" }

[features]
default = ["eight_khz"]
eight_khz = []
fourty_khz = []

[build-dependencies]
cc = "1.0.68"
